--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "type-graphql-filter",
   "version": "0.1.2",
   "description": "Filter decorator for type-graphql",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index.d.ts",
   "repository": "https://github.com/kontist/type-graphql-filter.git",
   "author": "Kontist GmbH",
   "license": "Apache-2.0",
