--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsdom": "^12.2.4",
     "@types/mocha": "^5.2.7",
     "@types/sinon": "^7.5.0",
+    "expect": "^25.1.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "tslint": "^5.20.1",
