--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2018",
     "module": "commonjs",
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
+    "esModuleInterop": true,
     "lib": ["es2015", "dom"],
     "declaration": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
