--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.5",
-    "@types/jsdom": "^12.2.4",
-    "@types/mocha": "^5.2.7",
-    "@types/sinon": "^7.5.0",
-    "expect": "^25.1.0",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "expect": "^26.6.2",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "reflect-metadata": "^0.1.13",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "tslint": "6.1.3",
+    "typescript": "^4.1.2"
   }
 }
