--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "type-graphql-filter",
-  "version": "0.2.3",
-  "description": "Filter decorator for type-graphql",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
-  "repository": "https://github.com/kontist/type-graphql-filter.git",
-  "author": "Kontist GmbH",
-  "license": "Apache-2.0",
-  "scripts": {
-    "build": "tsc",
-    "test": "npm run lint && npm run build && ./node_modules/mocha/bin/mocha --recursive 'dist/tests/**/*.spec.js'",
-    "cover": "nyc npm run test",
-    "lint": "./node_modules/tslint/bin/tslint --fix --project .",
-    "prepare": "tsc"
-  },
-  "dependencies": {
-    "class-validator": "^0.12.2",
-    "graphql": "^15.4.0",
-    "type-graphql": "^1.1.1"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "expect": "^26.6.2",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "reflect-metadata": "^0.1.13",
-    "tslint": "6.1.3",
-    "typescript": "^4.1.2"
-  }
+    "name": "type-graphql-filter",
+    "version": "0.2.3",
+    "description": "Filter decorator for type-graphql",
+    "main": "dist/lib/index.js",
+    "types": "dist/lib/index.d.ts",
+    "repository": "https://github.com/kontist/type-graphql-filter.git",
+    "author": "Kontist GmbH",
+    "license": "Apache-2.0",
+    "scripts": {
+        "build": "tsc",
+        "test": "npm run lint && npm run build && ./node_modules/mocha/bin/mocha --recursive 'dist/tests/**/*.spec.js'",
+        "cover": "nyc npm run test",
+        "lint": "./node_modules/tslint/bin/tslint --fix --project .",
+        "install": "npm run build"
+    },
+    "dependencies": {
+        "class-validator": "^0.12.2",
+        "graphql": "^15.4.0",
+        "type-graphql": "^1.1.1"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.2.14",
+        "@types/mocha": "^8.0.4",
+        "expect": "^26.6.2",
+        "mocha": "^8.2.1",
+        "nyc": "^15.1.0",
+        "reflect-metadata": "^0.1.13",
+        "tslint": "6.1.3",
+        "typescript": "^4.1.2"
+    }
 }
