--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "build": "tsc",
         "test": "npm run lint && npm run build && ./node_modules/mocha/bin/mocha --recursive 'dist/tests/**/*.spec.js'",
         "cover": "nyc npm run test",
-        "lint": "./node_modules/tslint/bin/tslint --fix --project .",
-        "prepare": "npm run build"
+        "lint": "./node_modules/tslint/bin/tslint --fix --project ."
     },
     "dependencies": {
         "class-validator": "^0.12.2",
