--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "./node_modules/tslint/bin/tslint --fix --project ."
   },
   "dependencies": {
+    "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "type-graphql": "^1.1.1"
   },
